<resources>
    <string name="app_name">NoiseCapture</string>
    <string name="action_settings">Settings</string>
    <string name="comment_cancel_change">Cancel</string>
    <string name="comment_save_change">Save</string>
    <string name="comment_delete_record">Delete</string>
    <string name="comment_title_save_change">Save changes?</string>
    <string name="comment_title_delete">Delete the measurement?</string>
    <string name="history_title_delete">Delete the selected measurement(s)?</string>
    <string name="record_message">Press the record button to start</string>
    <string name="calibrate_done">Calibration done, gain is set to %1$.1f dB</string>
    <string name="calibration_out_bounds_title">Noise level too low</string>
    <string name="calibration_out_bounds">Calibration sound level is incompatible with hardware specification bounds, it must be between %1$.0f dB and %2$.0f dB</string>
    <string name="calibration_save_change">Ignore and apply</string>
    <string name="calibration_cancel_change">Cancel</string>
    <string name="fail_share">Generation of the shared file failed</string>
    <string name="no_results">There is no result. Start a record before.</string>
    <string name="permission_explain_audio_record">NoiseCapture requires microphone use permission for audio measures</string>
    <string name="title_menu">Menu</string>
    <string name="title_service_measurement">Measurement</string>
    <string name="title_activity_measurement">Measurement</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_about">About</string>
    <string name="user_id_activity_about">User ID</string>
    <string name="title_activity_help">Help</string>
    <string name="title_appversion">Version %1$s %2$s r.%3$s</string>
    <string name="text_OK">YES, I understand</string>
    <string name="title_caution">Caution</string>
    <string name="text_caution">Remember that this application will never replace a certified and calibrated sound level meter.</string>
    <string name="text_CANCEL_data_transfer">Cancel</string>
    <string name="no_valid_dba_value">-</string>
    <string name="SL_dBA">dB(A)</string>
    <string name="title_settings_calibration_warmup_time">Calibration warm-up time</string>
    <string name="title_settings_calibration_warmup_time_description">Waiting time in seconds before calibration</string>
    <string name="title_settings_calibration_time">Calibration time</string>
    <string name="title_settings_calibration_time_description">Calibration time in seconds</string>
    <string name="title_settings_calibration_linear_title">Audio output</string>
    <string name="title_settings_calibration_linear_description">Device output for linear correlation test</string>
    <string name="setting_general_group">General</string>
    <string name="setting_measurement_group">Measurement</string>
    <string name="setting_calibration_group">Calibration</string>
    <string name="title_settings_recording">Recording</string>
    <string name="summary_settings_recording">Set maximal recording time</string>
    <string name="title_settings_caution">Caution message</string>
    <string name="summary_settings_tooltip">Check to display tooltip when touching elements in NoiseCapture</string>
    <string name="title_settings_tooltip">Tooltip message</string>
    <string name="summary_settings_caution">Check to display the caution message during the launch of the application</string>
    <string name="title_settings_recording_duration">Recording duration</string>
    <string name="title_settings_recording_gain">Signal gain</string>
    <string name="summary_settings_recording_gain">Set calibration signal gain in dB</string>
    <string name="title_settings_spectrogram_logscalemode">Spectrogram display</string>
    <string name="title_settings_delete_leq_on_pause">Leq delete on pause</string>
    <string name="title_settings_delete_leq_on_pause_description">On pause delete the last recorded seconds</string>
    <string name="summary_settings_spectrogram_logscalemode">Check for frequency scale in log, uncheck for linear</string>
    <string name="summary_settings_recording_duration">Set the recording duration (in second)</string>
    <string name="measurement_dba_min">Min</string>
    <string name="measurement_dba_max">Max</string>
    <string name="measurement_dba_mean">Mean</string>
    <string name="measurement_dba_la10">LA10</string>
    <string name="measurement_dba_la50">LA50</string>
    <string name="measurement_dba_la90">LA90</string>
    <string name="measurement_tab_spectrum">Spectrum</string>
    <string name="measurement_tab_spectrogram">Spectrogram</string>
    <string-array name="choice_user_history">
        <item>Upload to community</item>
        <item>Export result</item>
        <item>Edit description</item>
        <item>Show result</item>
        <item>Show on map</item>
        <item>Delete</item>
    </string-array>
    <string-array name="dm_list_array">
        <item>Measurement</item>
        <item>Results</item>
        <item>Calibration</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string name="result_share">Share this result</string>
    <string name="result_tooltip_minsl">Minimal 1 second A-weighted noise level</string>
    <string name="result_tooltip_maxsl">Maximal 1 second A-weighted noise level</string>
    <string name="result_tooltip_la10">LA10: A-weighted noise level that is exceeded for 10% of the
          measurement period. LA10 is a useful descriptor of road traffic noise, which is correlated with the noise annoyance.</string>
    <string name="result_tooltip_la50">LA50: A-weighted noise level that is exceeded for 50% of the
          measurement period. LA50 is the median sound level</string>
    <string name="result_tooltip_la90">LA90: A-weighted noise level that is exceeded for 90% of the
          measurement period. LA90 is a useful descriptor to quantify the background noise level</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="url_about">file:///android_asset/html/about.html</string>
    <string name="url_help">file:///android_asset/html/help.html</string>
    <string name="caption_SL">Sound level</string>
    <string-array name="catNE_list_array">
        <item>Greater 75 dB(A)</item>
        <item>65-75 dB(A)</item>
        <item>55-65 dB(A)</item>
        <item>45-55 dB(A)</item>
        <item>Less 45 dB(A)</item>
    </string-array>
    <string-array name="tags">
        <item>TEST</item>
        <item>Rain</item>
        <item>Wind</item>
        <item>Indoor</item>
        <item>Footsteps</item>
        <item>Voice</item>
        <item>Natural</item>
        <item>Mechanical</item>
        <item>Human</item>
        <item>Works</item>
        <item>Air t.</item>
        <item>Entertainment</item>
        <item>Children</item>
        <item>Music</item>
        <item>Road</item>
        <item>Rail</item>
        <item>Marine</item>
        <item>Alarms</item>
        <item>Industrial</item>
        <item>Water</item>
        <item>Animals</item>
        <item>Vegetation</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_html_page">View_html_page</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_start">Noise Capture</string>
    <string name="title_activity_calibration_start">Calibration</string>
    <string name="title_activity_calibration_linearity">Linearity correlation test</string>
    <string name="title_activity_menu_calibration">Calibration methods</string>
    <string name="title_activity_calibration_host">Auto calibration (sender)</string>
    <string name="title_activity_calibration_peer">Auto calibration (receiver)</string>
    <string name="start_text_title">NoiseCapture</string>
    <string name="start_text_subtitle">Measuring your sound environment</string>
    <string name="start_text_developed_by">Developed by</string>
    <string name="start_text_supported_by">Supported by</string>
    <string name="history_length">%d s</string>
    <string name="history_date">- %s</string>
    <string name="history_sel">%.01f dB(A)</string>
    <string name="measurement_processlastsamples">Processing remaining %d samples&#8230;</string>
    <string name="history_item_choice_title">Measurement %s</string>
    <string name="calibration_select_frequency">Choose frequency to show</string>
    <string name="local_service_started">Measurement service started</string>
    <string name="measurement_service_disconnected">Measurement service disconnected</string>
    <string name="measurement_pause">Measurement paused</string>
    <string name="delete">Delete</string>
    <string name="hint_userinput">Tap here to set a description</string>
    <string name="no_data_text_description">Start by pressing the record button</string>
    <string name="export_zip_info">Export archive description\n\n
meta.properties file are general info on device and record:\n
- version_name Major, minor and revision version\n
- build_date Date of APK assembly\n
- version_number Application version integer\n
- time_length Record length in seconds\n
- uuid Random identifier set on first application start\n
- leq_mean Mean equivalent sound level in dB(A) of the measure\n
- record_utc Record time in epoch millisecond\n
- device_manufacturer device_model device_product Generic Hardware information of measure device\n
- pleasantness User input pleasantness 1-100\n
- tags Comma separated values of user selected tags (english only)\n
- user_profile User knowledge in acoustics NONE, NOVICE, EXPERT\n
- noiseparty_tag Record NoiseParty identifier\n\n

track.geojson 1s samples of measures. Using the geojson format (http://geojson.io)\n
- leq_mean 1s mean equivalent sound level in dB(A)\n
- accuracy Localisation precision in m (provided by gps, network or gsm)\n
- location_utc Localisation fix time in epoch millisecond\n
- leq_utc Measure time in epoch millisecond\n
- leq_id Unique identifier of record\n
- marker_color Color used by geojson.io\n
- bearing Movement orientation.See https://developer.android.com/reference/android/location/Location.html#getBearing()\n
- speed Estimated device speed in m/s\n
- leq_frequency 1s mean equivalent sound level in dB(A) for the specified frequency\n</string>
    <string name="title_activity_comment">Description</string>
    <string name="userinfo_unpleasant">Unpleasant</string>
    <string name="userinfo_pleasant">Pleasant</string>
    <string name="calibration_status_waiting_for_user_start">Waiting for calibration start&#8230;</string>
    <string name="calibration_status_waiting_for_start_timer">Calibration is about to start&#8230;</string>
    <string name="calibration_status_send_parameters">Waiting time before sending calibration parameters&#8230;</string>
    <string name="calibration_status_receive_reference">Awaiting reference value&#8230;</string>
    <string name="calibration_status_cooldown">Waiting time before sending reference value&#8230;</string>
    <string name="userinfo_button_measure">Measure</string>
    <string name="userinfo_button_results">Valid</string>
    <string name="userinfo_tags">Predominant sources</string>
    <string name="calibration_status_on">Calibration&#8230;</string>
    <string name="calibration_linear_status_on">Calibration at %1$.0f dB</string>
    <string name="calibration_status_end">Calibration done</string>
    <string name="calibration_status_background_noise">Measuring background noise</string>
    <string name="calibration_button_start">Start</string>
    <string name="calibration_button_cancel">Cancel</string>
    <string name="calibration_laeq_title">Measured LAeq:</string>
</resources>